syntax = "proto3";

package article_service;

option go_package = "0AlexZhong0/goblog/api/protobuf/article_service";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service ArticleService {
  rpc GetArticle (GetArticleRequest) returns (Article);
  rpc GetArticles (google.protobuf.Empty) returns (stream ArticleSummary);
  rpc WriteArticle (WriteArticleRequest) returns (google.protobuf.BoolValue);
  rpc SaveArticleAsDraft (WriteArticleRequest) returns (google.protobuf.BoolValue);
}

// requests
message GetArticleRequest {
  string articleId = 1;
}

message WriteArticleRequest {
  string body = 2;
  string title = 1;
  string coverImage = 3;
}

// responses
message Article {
  string id = 1;
  string body = 2;
  string title = 3;
  bool isDraft = 4;
  string coverImage = 5;
  google.protobuf.Timestamp createdAt = 6;
}

message ArticleSummary {
  string title = 1;
  string excerpt = 2;
  string coverImage = 3;
}
